src/components/Header/_header.scss
.header-wrapper {
  background: #141843;
  stroke-width: 1px;
  stroke: #828fbb;
  backdrop-filter: blur(20.833332061767578px);
  border-bottom: 2px solid #828fbb;
  position: sticky;
  left: 0;
  right: 0;
  top: 0;
  z-index: 7;
  .header-link {
    color: #fff;
    text-align: center;
    font-size: 16px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
    text-decoration: none;
  }

  .header-link-active {
    color: #2f80ed;
    text-align: center;
    font-size: 16px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
  }

  .blue-btn {
    border-radius: 10px;
    background: #2f80ed;
    height: 40px;
    color: #fff;
    font-size: 12px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
  }

  .search-input {
    width: 80%;
    background: #141843;
    border: 1px solid #828fbb;
    height: 40px;
    padding-left: 50px;
    border-radius: 12px;
    color: #fff;
    font-size: 12px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
  }

  .search-input::placeholder {
    color: #828fbb;
    font-size: 12px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
  }
  .search-icon {
    position: absolute;
    left: 20px;
    top: 0;
    bottom: 0;
    margin: auto;
  }
}

.error-btn {
  border-radius: 15px;
  border: 1px solid #e54d25;
  color: #e54d25;
  text-align: center;
  font-size: 12px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  background: transparent;
  height: 40px;
}

.error-btn:hover {
  color: #fff;
  background: #e54d25;
}

.account-btn {
  border-radius: 15px;
  background: transparent;
  border: 1px solid #2f80ed;
  height: 40px;
  color: #fff;
  font-size: 12px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

.blue-btn:active {
  background: #2f80ed !important;
}

.blue-btn:hover {
  background: linear-gradient(135deg, #8967c8 0%, #2f80ed 100%) !important;
}

.account-btn:hover {
  background: #2f80ed !important;
}

.menuwrapper {
  border-radius: 10px;
  border: 1px solid #b8b8e0;
  background: linear-gradient(
    168deg,
    #161c4a -11.33%,
    #161c4b -11.32%,
    #141843 116.32%,
    #1b1e49 116.32%
  );
  padding: 10px;
  position: absolute;
  top: 22px;
  right: -53px;
  width: 145px;
}

.menuitem2 {
  display: flex;
  align-items: center;
  gap: 10px;
  color: #fff;
  font-size: 10px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  cursor: pointer;
  padding: 5px;
  border-radius: 10px;
}

.menuitem2:hover {
  background: linear-gradient(
    268deg,
    rgba(255, 255, 255, 0.21) 0%,
    rgba(255, 255, 255, 0) 100%
  );
  color: #11fed2;
}

.swappi-btn {
  border-radius: 10px;
  outline: none !important;
  border: none !important;
  background: linear-gradient(240deg, #8967c8 0%, #2f80ed 100%);
  height: 40px;
  color: #fff;
  font-size: 12px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  text-decoration: none !important;
  transition: all .25s;
}

.swappi-btn:hover{
  background: linear-gradient(120deg, #8967c8 0%, #2f80ed 100%);

}

.search-result-wrapper {
  border-radius: 10px;
  border: 1px solid #b8b8e0;
  background: linear-gradient(
    168deg,
    #161c4a -11.33%,
    #161c4b -11.32%,
    #141843 116.32%,
    #1b1e49 116.32%
  );
  padding: 10px;
  position: absolute;
  top: 30px;
  width: 400px;
  left: 90px;
  height: 200px;
  overflow-y: auto;
}

.collection-logo-small {
  width: 32px;
  height: 32px;
}

.collection-title {
  // color: #fff;
  font-size: 12px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  letter-spacing: 0.8px;
  text-transform: capitalize;
}

